# ai-job-hunter

./: .env.example  .gitignore  CLAUDE.md  README.md  SETUP.md  docker-compose.yml  main.py  pyproject.toml
app/: config.py  db.py  main.py  vector_store.py
app/jobs/: adzuna_collector.py  collector.py  models.py  repository.py  routes.py  schema.py  service.py
app/llm/: __init__.py  base.py  client.py  exceptions.py  gemini_provider.py  groq_provider.py  ollama_provider.py
app/mcp/: client.py  gdrive_auth.py  gdrive_client.py  github_client.py
app/resume/: chunking.py  embeddings.py  extractor.py  models.py  parser.py  repository.py  routes.py  schema.py  service.py
scripts/: gdrive_oauth_setup.py  gdrive_token_debug.py  init_db.py  mcp_smoke_test.py
tests/: test_adzuna_collector.py  test_api.py  test_db_init.py  test_gdrive_client.py  test_github_client.py  test_jobs_api.py  test_jobs_repository.py  test_jobs_service.py  test_llm_client.py  test_llm_provider_errors.py  test_mcp_client.py  test_resume_chunking.py  test_resume_embeddings.py  test_resume_extractor.py  test_resume_parser.py  test_resume_repository.py  test_resume_service.py  test_vector_store.py
